--- a/web/css/style.css
+++ b/web/css/style.css
@@ -31,6 +31,11 @@ a {
 .dark {
 	background: #272A2D;
 }
+
+.grey {
+    color: #cccccc;
+}
+
 .black, .dark, .black h1, .dark h1, .black h3, .dark h3 {
 	color: #fff;
 }
@@ -52,6 +57,30 @@ a {
 #year {
 	border-bottom: 1px solid #333;
 }
+
+
+#st_month_selection li {
+    text-align: center;
+    padding: 12px 0 12px 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 17px;
+    display: inline;
+}
+#st_month_selection a {
+    color: #ccc;
+    padding-top: 11px;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+#st_month_selection li.active a, #st_month_selection a:hover {
+    color: #0A92D8;
+    border-top: 2px solid #0A92D8;
+    text-decoration: none;
+}
+
+
+
+
 #month_selection li {
 	text-align: center;
 	padding: 12px 0 12px 0;
