--- a/web/css/style.css
+++ b/web/css/style.css
@@ -246,5 +246,10 @@ sup {
     text-align: center;
     color: #777;
     font-weight: normal;
-    font-size: 32px;
+    font-size: 16px;
+}
+
+#messages {
+    overflow-y: scroll;
+    height: 200px;
 }
